# openapi.json
@@ -330,6 +330,28 @@
             "description": "success",
             "content": {
               "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "address": {
+                      "type": "string"
+                    },
+                    "contract": {
+                      "type": "string"
+                    },
+                    "imageUrl": {
+                      "type": [
+                        "string",
+                        "null"
+                      ]
+                    }
+                  },
+                  "required": [
+                    "address",
+                    "contract",
+                    "imageUrl"
+                  ]
+                },
                 "example": {
                   "address": "0x1111111111111111111111111111111111111111",
                   "contract": "0x6666397DFe9a8c469BF65dc744CB1C733416c420",
